[project]
name = "huehistogram"
version = "1.0.0"
description = "A python script to generate hue histogram of an image"
authors = [
    { name = "NitCelcius", email = "nitcelcius@nitcelcius.me" }
]
dependencies = [
    "numpy>=2.1.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "japanize-matplotlib>=1.1.3",
    "imageio>=2.35.1",
    "pandas>=2.2.2",
    "ruff>=0.6.5",
    "pytest>=8.3.3",
    "notebook>=7.2.2",
    "scikit-image>=0.24.0",
    "opencv-python>=4.10.0.84",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/huehistogram"]

[tool.uv]
dev-dependencies = [
    "line-profiler-pycharm>=1.1.0",
    "line-profiler>=4.1.3",
    "memory-profiler>=0.61.0",
    "reloadium>=1.5.1",
]
